[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemies/Goomba/Goomba.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Goomba/Goomba.tres" type="SpriteFrames" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.4163, 2.77011 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.19756, 10.2331 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2.00862, 10.5165 )

[sub_resource type="CircleShape2D" id=4]
radius = 14.5685

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 9.29827, 10 )

[node name="Goomba" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.548233, 2.86016 )
scale = Vector2( 1.1599, 1.1548 )
frames = ExtResource( 2 )
animation = "death"

[node name="Position2D" type="Position2D" parent="."]

[node name="StompDetector" type="Area2D" parent="."]
position = Vector2( -0.0944691, -9.73025 )

[node name="TopCol" type="CollisionShape2D" parent="StompDetector"]
modulate = Color( 0.235294, 0.054902, 0.988235, 1 )
light_mask = 0
position = Vector2( 0, 7.62939e-06 )
shape = SubResource( 1 )

[node name="KillDetector" type="Area2D" parent="."]

[node name="LeftCol" type="CollisionShape2D" parent="KillDetector"]
modulate = Color( 0, 0.729412, 0.027451, 1 )
position = Vector2( -10.6749, 2.36172 )
shape = SubResource( 2 )

[node name="RightCol" type="CollisionShape2D" parent="KillDetector"]
modulate = Color( 0, 0.694118, 0.027451, 1 )
position = Vector2( 10.0136, 2.64511 )
shape = SubResource( 3 )

[node name="Body" type="Area2D" parent="."]
position = Vector2( 3.8147e-06, 15.6459 )
collision_layer = 4
collision_mask = 4

[node name="FireballCol" type="CollisionShape2D" parent="Body"]
modulate = Color( 0.0156863, 0, 0, 1 )
position = Vector2( -0.330551, -14.2136 )
shape = SubResource( 4 )

[node name="BodyCol" type="CollisionShape2D" parent="."]
position = Vector2( -0.472343, 3.38282 )
shape = SubResource( 5 )
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="area_entered" from="KillDetector" to="." method="_on_KillDetector_area_entered"]
[connection signal="body_entered" from="KillDetector" to="." method="_on_KillDetector_body_entered"]
[connection signal="area_entered" from="Body" to="." method="_on_Body_area_entered"]
